--- a/src/components/Teams/Teams.css
+++ b/src/components/Teams/Teams.css
@@ -1,6 +1,16 @@
 .Teams-btn {
     text-decoration: none;
-    margin: 5px;
+    width: 100%;
+    height: 100%;
+    color: red;
+    -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+            border-radius: 8px;
+    background: rgba(255, 255, 255, 0.7);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .Teams-btn:hover {
@@ -11,3 +21,14 @@
     text-decoration: none;
 }
 
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+}
+
+.team-card {
+    width: 20%;
+    margin: 5px;
+}
