--- a/src/components/TeamPage/TeamPage.css
+++ b/src/components/TeamPage/TeamPage.css
@@ -7,3 +7,8 @@
     color: cornflowerblue;
     background-color: white;
 }
+
+.add-fav {
+    color: cornflowerblue;
+    background-color: whitesmoke;
+}
